<resources>
    <string name="app_name">League</string>
    <string name="unknown_error">UnKnown Error</string>
    <string name="description">Description</string>
    <string name="last_match">Last Match</string>
    <string name="match">Match</string>
    <string name="next_match">Next Match</string>
    <string name="classement">Classement</string>
    <string name="search_hint">Search all about soccer</string>
    <string name="match_details">Match Details</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorite">You have no favorite this time</string>
    <string name="unfavorite_title">Unfavorite</string>
    <string name="unfavorite_description">Are you sure to unfavorite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="team">TEAM</string>
    <string name="team_info">Team Info</string>
    <string name="player">Player</string>
    <string name="peoples">peoples</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="played">PLAYED</string>
    <string name="win">WIN</string>
    <string name="goals">GOALS</string>
    <string name="draw">DRAW</string>
    <string name="loss">LOSS</string>
    <string name="total">TOTAL</string>
</resources>
