<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="@dimen/default_margin">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/unfavorite_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/default_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/unfavorite_description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/no"
                android:background="@color/white"
                android:textColor="@color/gray"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/yes"
                android:minWidth="0dp"
                android:background="@color/white"
                android:textColor="@color/gray"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>